fix css spacing and font styles

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ body {
   color: var(--text-primary);
   text-shadow: 2px 2px 0 #000, -2px 2px 0 #000, 2px -2px 0 #000,
     -2px -2px 0 #000;
+  text-align: center;
 }
 
 .font_subtitle {
@@ -83,6 +84,7 @@ body {
   position: absolute;
   bottom: calc(var(--footer-size) + var(--footer-border-size));
   left: 32px;
+  height: 96px;
 }
 
 .footer_minion {
@@ -90,6 +92,8 @@ body {
   bottom: calc(var(--footer-size) + var(--footer-border-size) + 96px);
   left: 40px;
   animation: flip2D 0.5s infinite ease-in-out;
+  height: 40px;
+  width: 40px;
 }
 
 .footer_grass {
@@ -117,6 +121,7 @@ body {
 .title_double_cloud,
 .title_single_cloud {
   position: absolute;
+  height: 46px;
 }
 
 .title_container {
@@ -124,12 +129,12 @@ body {
 }
 
 .title_double_cloud {
-  left: -130px;
+  left: -160px;
   top: 50px;
 }
 
 .title_single_cloud {
-  right: -80px;
+  right: -120px;
   top: -30px;
 }
 
